# team7seas

./: .replit  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  RENDER_DEPLOYMENT_GUIDE.md  deploy.md  deploy.sh  deployment_checker.py  deployment_test.py  document_processor.py  gemini_client.py  main.py  models.py  pinecone_client.py  production_ready_check.md  pyproject.toml  question_answerer.py  render-requirements.txt  render.yaml  replit.md  requirements.txt  text_chunker.py
attached_assets/: Pasted--curl-X-POST-https-finalllllll-onrender-com-hackrx-run-H-Content-Type-application-json--1753953263826_1753953263828.txt  Pasted-Absolutely-Below-is-a-Replit-ready-FastAPI-app-prompt-that-meets-all-HackRx-webhook-requireme-1753939330776_1753939330778.txt  Pasted-echnologies-Used-Component-Tech-Stack-Backend-API-FastAPI-Embedding-Model-Gemini-text-embedding-004--1753950715073_1753950715073.txt
