[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "fastapi>=0.116.1",
    "fitz>=0.0.1.dev2",
    "google-genai>=1.28.0",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "sift-stack-py>=0.8.0",
    "uvicorn>=0.35.0",
]
